# algorithms_and_data_structures

./: CMakeLists.txt
include/: CMakeLists.txt
include/alg/: alg.h  algc.h
include/alg/lab3/: sorts.h
include/alg/lab4/: search.h
include/alg/lab5/: singlyconnectedlist.h
include/alg/lab6/: queue.h  stack.h
include/alg/lab7/: tree.h
include/alg/lab8/: table.h
lab1/task5/: main.c
lab1/task8/: main.c
lab2/: test.c
lab2/task2/: main.c
lab2/task3/: main.c
lab3/: main.c
lab4/: main.c
lab5/task2/: main.c
lab5/task3/: main.c
lab6/task2/: main.c
lab6/task3/: main.c
lab6/task5/: main.c
lab6/task6/: main.c
lab7/task2/: main.c
lab7/task3/: main.c
lab7/task3a/: main.c
lab7/task3c/: main.c
lab8/task2/: main.c
lab8/task3/: formula.txt  main.c  periodic.txt
lecture051023/: linkedlist.h  tablearray.h
libs/alg/: CMakeLists.txt  alg.h  algc.h  algcpp.h
libs/alg/lab1/: task5.c  task7.c
libs/alg/lab2/: string.h  task2.c  task3.c
libs/alg/lab3/: bubblesort.c  bubblesortmod1.c  bubblesortmod2.c  heapsort.c  hoarsort.c  insertionsort.c  pyramidsort.c  selectionsort.c  shellsort.c  sorts.h  utility.c
libs/alg/lab4/: binarysearch.c  blocksearch.c  linearquicksearch.c  linearsearch.c  orderedlinearquicksearch.c  utility.c
libs/alg/lab5/: task2.c
libs/alg/lab6/: queue.c  stack.c
libs/alg/lab7/: tree.c
libs/alg/lab8/: table.c
